--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -200,10 +200,10 @@ button:focus {
 }
 
 .bg-gray {
-	 background-image: url('image/image4.png'); /* Chemin relatif à l'emplacement de votre fichier CSS */
-    background-size: cover; /* Pour que l'image couvre tout l'espace disponible */
-    background-position: center center; /* Pour centrer l'image */
-    background-repeat: no-repeat; /* Pour ne pas répéter l'image */
+	  background-image: url('../../image/image4.png');
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
 }
 
 .bg-gradient {
