--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -200,10 +200,8 @@ button:focus {
 }
 
 .bg-gray {
-	  background-image: url('../../image/image4.png');
-    background-size: cover;
-    background-position: center center;
-    background-repeat: no-repeat;
+	background-color: #a4a4ad;
+	
 }
 
 .bg-gradient {
