--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -200,13 +200,7 @@ button:focus {
 }
 
 .bg-gray {
-	background-image: url('../../image/image4.png'); /* Remplacez le fond coloré par une image */
-	background-size: cover; /* Assurez-vous que l'image couvre toute la zone */
-	background-position: center center; /* Centrez l'image dans le conteneur */
-	background-repeat: no-repeat; /* L'image ne doit pas se répéter */
-}
-
-	
+	background-color: #f8f8f9;
 }
 
 .bg-gradient {
