--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2206,35 +2206,30 @@ textarea:focus {
 .footer-copyright-text p {
 	color: #fff;
 }
-/* Ajout d'un effet de survol sur les éléments de la barre de navigation */
-.navbar-nav .nav-item .nav-link {
-  transition: color 0.3s, box-shadow 0.3s;
+
+
+.nav-item a {
+    transition: all 0.3s ease;
+    border-radius: 0; /* Mettez à 0 pour un effet carré */
 }
 
-.navbar-nav .nav-item .nav-link:hover,
-.navbar-nav .nav-item .nav-link:focus {
-  color: #fff; /* Changer la couleur du texte lors du survol */
-  box-shadow: 0 2px 10px rgba(0,0,0,0.2); /* Ajouter une ombre portée pour un effet de profondeur */
-  background-color: #3069b3; /* Changer la couleur d'arrière-plan lors du survol */
-  border-radius: 3px; /* Arrondir les coins */
+.nav-item a:hover, .nav-item a:focus {
+    border-radius: 10px; /* Augmentez pour un effet plus arrondi */
+    background: #3069b3;
+    color: #fff;
 }
 
-/* Ajouter une animation de fond sur le bouton actif */
-.navbar-nav .nav-item .active {
-  background-image: linear-gradient(45deg, #3069b3, #a2b9ce);
-  color: #fff;
-  animation: GradientBackground 3s ease infinite;
+/* Pour le bouton de téléchargement du tableau de synthèse */
+.mon-bouton {
+    transition: all 0.3s ease;
+    border-radius: 0; /* Mettez à 0 pour un effet carré */
 }
 
-@keyframes GradientBackground {
-  0% { background-position: 0% 50%; }
-  50% { background-position: 100% 50%; }
-  100% { background-position: 0% 50%; }
-}
-
-/* Styles spécifiques pour les boutons de navigation */
-.navbar-area .button {
-  transition: transform 0.3s; /* Ajouter une transition pour l'effet de survol */
+.mon-bouton:hover {
+    border-radius: 10px; /* Augmentez pour un effet plus arrondi */
+    background: #3069b3;
+    color: #fff;
+    text-decoration: none;
 }
 
 .navbar-area .button:hover {
