--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -785,7 +785,7 @@ ul {
 	position: relative;
 	z-index: 1;
 	color: #fff;
-	background: url(../image/arriereplan1004.jpg);
+	background: url(../assets/image2/arriereplan1004.jpg);
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center;
