--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1058,7 +1058,7 @@ ul {
 	position: relative;
 	z-index: 1;
 	text-align: center;
-	background: url(../img/banner-bg.jpg);
+	background: url(../image2/image4.png);
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center;
